Fix gap

--- a/src/UI/components/buttons/button/Button.scss
+++ b/src/UI/components/buttons/button/Button.scss
@@ -2,9 +2,9 @@
   --b: 3px;
   --s: 0.45em;
   --color: var(--primary);
-
-  padding: calc(0.5em + var(--s)) calc(0.9em + var(--s));
-  color: var(--color);
+  font-size: var(--fs-400);
+  padding: calc(0.8em + var(--s)) calc(1.2em + var(--s));
+  color: var(--secondary);
   --_p: var(--s);
   background: conic-gradient(
       from 90deg at var(--b) var(--b),
