--- a/src/UI/components/input/Input.scss
+++ b/src/UI/components/input/Input.scss
@@ -7,8 +7,7 @@
   --blur: var(--text-color);
 
   position: relative;
-  font-size: 1rem;
-  margin: 2em 0.2em;
+  margin: 1em 0.2em;
   height: 2rem;
   display: flex;
   flex: 1;
@@ -66,7 +65,7 @@
     &:invalid:not(:placeholder-shown) {
       + .label {
         transform: translateX(-0.3em) translateY(-1.6em);
-        font-size: 0.6em;
+        font-size: 0.7em;
         padding: 0 0.3em;
         color: var(--blur);
       }
